--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,7 +11,7 @@
             background-color: rgba(240, 248, 255, 0.55);
             box-shadow: rgba(255, 0, 0, 0.32) 0 3px 90px 10px;
         }
-        .main-card:hover  {
+        .main-card:hover {
             transform: translateY(-4px);
             background-color: rgba(227, 231, 250, 0.92);
             box-shadow: rgba(97, 3, 3, 0.6) 0 10px 45px 10px;
@@ -45,14 +45,14 @@
         }
 
         .form-control {
-                background-color: rgba(0,0,0,0);
+            background-color: rgba(0,0,0,0);
         }
         .form-control:focus {
             border: none;
             background-color: rgb(227, 231, 250);
             box-shadow: inset rgba(10, 10, 10, 0.25) 4px 6px 3px;
         }
-        .form-control:focus .main-card:hover{
+        .main-card:focus-within {
             transform: translateY(-4px);
             background-color: rgba(227, 231, 250, 0.92);
             box-shadow: rgba(97, 3, 3, 0.6) 0 10px 45px 10px;
