--- a/main/templates/main/search_result.html
+++ b/main/templates/main/search_result.html
@@ -52,6 +52,11 @@
             background-color: rgb(227, 231, 250);
             box-shadow: inset rgba(10, 10, 10, 0.25) 4px 6px 3px;
         }
+        .main-card:focus-within {
+            transform: translateY(-4px);
+            background-color: rgba(227, 231, 250, 0.92);
+            box-shadow: rgba(97, 3, 3, 0.6) 0 10px 45px 10px;
+        }
 
         .message {
             height: 60px;
