--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -219,7 +219,7 @@ Dictionary Online</pre>
                             <source src="{% static 'audio/music1.mp3' %}" type="audio/mpeg">
                         </audio>
                         <p style="margin-top: 5px; font-weight: bold; text-align: center; color: rgba(0,0,0,0.7);">
-                            Click the start button to play...</p>
+                            if didn't start, click to play...</p>
                     </div>
                 </div>
             </div>
